<resources>
    <string name="app_name">Foosball Matches</string>
    <string name="menu_title_matches">Matches</string>
    <string name="menu_title_ranking">Ranking</string>
    <string name="menu_title_players">Players</string>
    <string name="menu_title_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="match_card_view_score">%d - %d</string>
    <string name="match_details_players_view_item_text">%d - %s</string>
    <string name="match_details">Match Details</string>
    <string name="match_details_title_date">Date</string>
    <string name="match_details_title_time">Time</string>
    <string name="match_details_title_player_1">Player 1</string>
    <string name="match_details_title_player_1_score">Player 1 Score</string>
    <string name="match_details_title_player_2_score">Player 2 Score</string>
    <string name="match_details_title_player_2">Player 2</string>
    <string name="button_submit">Submit</string>
    <string name="activity_match_details_edit_date_hint">Select a date</string>
    <string name="activity_match_details_edit_time_hint">Select a time</string>
    <string name="activity_match_details_edit_player_hint">Select a player</string>
    <string name="activity_match_details_edit_player_score_hint">Type score</string>
    <string name="activity_match_details_error_message_date">Date missing</string>
    <string name="activity_match_details_error_message_player">Player missing</string>
    <string name="activity_match_details_error_message_score">Score missing</string>
    <string name="error_message_generic">Something went wrong. Try again</string>
    <string name="activity_match_details_error_message_score_tied">Scores cannot be tied. There should be a winner</string>
    <string name="activity_match_details_error_message_same_player">Same players are selected as both player 1 and player 2</string>
    <string name="fragment_ranking_header_rank">Rank</string>
    <string name="fragment_ranking_header_name">Name/Id</string>
    <string name="fragment_ranking_header_total_played">Total Played</string>
    <string name="fragment_ranking_header_wins">Wins</string>
    <string name="fragment_ranking_header_losses">Losses</string>
    <string name="ranking_sort_type_most_wins">Most Wins</string>
    <string name="ranking_sort_type_most_losses">Most Losses</string>
    <string name="ranking_sort_type_total_played">Total Played</string>
    <string name="ranking_sort_type_dialog_header">Select a sort type</string>
    <string name="fragment_settings_clear_data_header">Clear all data</string>
    <string name="fragment_settings_clear_data_button">Clear</string>
    <string name="fragment_settings_populate_data_header">Populate sample data when database is empty</string>
    <string name="fragment_settings_populate_data_button">Populate</string>
    <string name="player_details">Player Details</string>
    <string name="activity_player_details_edit_id_header">Employee Id</string>
    <string name="activity_player_details_edit_id_hint">Type employee id</string>
    <string name="activity_player_details_edit_name_header">Name</string>
    <string name="activity_player_details_edit_name_hint">Type name</string>
    <string name="activity_player_details_error_message_id">Employee id missing</string>
    <string name="activity_player_details_error_message_name">Name missing</string>
    <string name="activity_player_details_error_message_duplicate_id">Duplicate Employee Id</string>
    <string name="fragment_matches_list_empty_message">There are no matches added. Try adding one</string>
    <string name="players_list_empty_message">There are no players added. Try adding one</string>
    <string name="players_list_not_enough_players_message">There should be at least 2 players added to create a match</string>
    <string name="players_list_empty_message_title">Not Enough Players</string>
    <string name="players_list_dialog_dismiss_button">Okay</string>
</resources>
