<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_ranking_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/fragment_ranking_header_ranking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_ranking_header_rank"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fragment_ranking_header_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_ranking_header_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/fragment_ranking_header_rank_end_guideline" />

        <TextView
            android:id="@+id/fragment_ranking_header_total_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_ranking_header_total_played"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/fragment_ranking_header_name_end_guideline" />

        <TextView
            android:id="@+id/fragment_ranking_header_wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_ranking_header_wins"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/fragment_ranking_header_total_played_end_guideline" />

        <TextView
            android:id="@+id/fragment_ranking_header_losses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_ranking_header_losses"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/fragment_ranking_header_wins_end_guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_ranking_header_rank_end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_ranking_header_name_end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_ranking_header_total_played_end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_ranking_header_wins_end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_ranking_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_ranking_header_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout="@layout/fragment_ranking_recycler_item_view"/>

    <TextView
        android:id="@+id/fragment_ranking_list_empty_message"
        android:layout_margin="@dimen/page_margin_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/players_list_empty_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>